@@ -219,6 +219,10 @@
    <!-- ==== End of Figure ==== -->
    
    </para>
+  <para>
+  Instead of using the mouse you can use the keyboard to play <application>Five or More</application>. To use the keyboard, hit an arrow key and a cursor will appear near the center of the board. The arrow keys will move the cursor. When the cursor is over the ball you want to move, use the spacebar to select it. Then shift the cursor to the ball's destination and hit the space bar again to move the ball.</para><para>If you start using the mouse again, the cursor will disappear. The cursor will reappear if you use the arrow keys again.
+  </para>
+
   </sect2>
 
 
